--- a/public/bootstrap/css/style.css
+++ b/public/bootstrap/css/style.css
@@ -641,3 +641,23 @@ svg {
 	max-width:100%;
 	width:100%;
 }
+
+/*Ajoute*/
+
+p {
+    font-size: 19px;
+}
+
+.textBanner {
+    font-family: "Raleway";
+    font-size: 65px;
+    font-weight: 100;
+    letter-spacing: 1px;
+    line-height: 71.5px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 30px;
+    text-align: center;
+    text-transform: uppercase;
+}
